DDF-303 removed capability to load more results, fixed searching text on firefox

--- a/search-ui/standard/src/main/webapp/css/searchPage.css
+++ b/search-ui/standard/src/main/webapp/css/searchPage.css
@@ -303,7 +303,7 @@ span.add-on {
     height: 30px;
     text-align: center;
     font-size: 14px;
-    font-weight: bold;
+
     z-index: 5000;
 }
 
@@ -317,20 +317,20 @@ span.add-on {
     height: 30px;
     text-align: center;
     font-size: 14px;
-    font-weight: bold;
+
     z-index: 5000;
 
     background: -moz-linear-gradient(left, #000000, 0.4, #000000, 0.5, white, 0.6, #000000, #000000);
     background: -webkit-gradient(linear,left top,right top,color-stop(0, #000000),color-stop(0.4, #000000),color-stop(0.5, white),color-stop(0.6, #000000),color-stop(1, #000000));
 
-    -moz-background-clip: text;
     -webkit-background-clip: text;
-    -moz-text-fill-color: transparent;
     -webkit-text-fill-color: transparent;
 
     -webkit-animation: slidetext 4s infinite;
     animation: slidetext 4s infinite;
 
+    text-size-adjust: none;
+    -moz-text-size-adjust: none;
     -webkit-text-size-adjust: none;
 }
 
